--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "@testing-library/react": "^11.1.2",
     "@testing-library/user-event": "^12.2.2",
     "bootstrap": "^4.5.3",
+    "moment-timezone": "^0.5.32",
     "react": "^17.0.1",
+    "react-bingmaps": "^3.6.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
+    "react-live-clock": "^5.0.11",
+    "react-moment": "^1.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "web-vitals": "^0.2.4"
